--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Our Menue</title>
+        <link rel="stylesheet" href="CSS/module2.css">
     </head>
     <body>
         <h1>Our Menu</h1>
+            <section>
+                <h2>Chicken</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat necessitatibus voluptas exercitationem omnis beatae minus quos praesentium odit sint dicta porro accusantium fuga, cupiditate magnam modi, nesciunt provident perspiciatis adipisci?</p>
+            </section>
+            <section>
+                <h2>Beef</h2>
+                <p>Lorem50 ipsum dolor, sit amet consectetur adipisicing elit. Odio harum incidunt maiores! Consequatur eaque id quod nobis quae repellat, eius ducimus quam tempora exercitationem repellendus tempore. Dolore fugit aspernatur consequuntur!</p>
+            </section>
+            <section>
+                <h2>Sushi</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut recusandae accusamus quae atque ipsam, natus temporibus assumenda similique eligendi tempore beatae reiciendis eum quisquam iste. Nihil dolorum inventore in asperiores!</p>
+            </section>
     </body>
 </html>
