--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Our Menue</title>
         <link rel="stylesheet" href="CSS/module2.css">
     </head>
     <body>
         <h1>Our Menu</h1>
-            <section>
-                <h2 class="align1">Chicken</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat necessitatibus voluptas exercitationem omnis beatae minus quos praesentium odit sint dicta porro accusantium fuga, cupiditate magnam modi, nesciunt provident perspiciatis adipisci?</p>
-            </section>
-            <section>
-                <h2 class="align2">Beef</h2>
-                <p>Lorem50 ipsum dolor, sit amet consectetur adipisicing elit. Odio harum incidunt maiores! Consequatur eaque id quod nobis quae repellat, eius ducimus quam tempora exercitationem repellendus tempore. Dolore fugit aspernatur consequuntur!</p>
-            </section>
-            <section>
-                <h2 class="align3">Sushi</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut recusandae accusamus quae atque ipsam, natus temporibus assumenda similique eligendi tempore beatae reiciendis eum quisquam iste. Nihil dolorum inventore in asperiores!</p>
-            </section>
+            <div class="row">
+                <section class="col-lg-4 col-md-6">
+                    <h2 class="align1">Chicken</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat necessitatibus voluptas exercitationem omnis beatae minus quos praesentium odit sint dicta porro accusantium fuga, cupiditate magnam modi, nesciunt provident perspiciatis adipisci?</p>
+                </section>
+                <section class="col-lg-4 col-md-6">
+                    <h2 class="align2">Beef</h2>
+                    <p>Lorem50 ipsum dolor, sit amet consectetur adipisicing elit. Odio harum incidunt maiores! Consequatur eaque id quod nobis quae repellat, eius ducimus quam tempora exercitationem repellendus tempore. Dolore fugit aspernatur consequuntur!</p>
+                </section>
+                <section class="col-lg-4 col-md-12">
+                    <h2 class="align3">Sushi</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut recusandae accusamus quae atque ipsam, natus temporibus assumenda similique eligendi tempore beatae reiciendis eum quisquam iste. Nihil dolorum inventore in asperiores!</p>
+                </section>
+            </div>
     </body>
 </html>
